--- a/FortniteLauncher/MainWindow.xaml
+++ b/FortniteLauncher/MainWindow.xaml
@@ -41,7 +41,7 @@
                     <Button Content="Start!" Margin="241,161,0,0" VerticalAlignment="Top" Width="222" x:Name="StartBtn" Click="StartBtn_Click" />
                     <TextBlock x:Name="CurrentStatus" HorizontalAlignment="Left" Margin="225,105,0,0" TextWrapping="Wrap" Text="  " VerticalAlignment="Top" Width="198"/>
                     <CheckBox x:Name="IncludedProxyUSE" Checked="IncludedProxyUSE_Checked" Content="Use included Proxy" Margin="30,193,0,0" VerticalAlignment="Top" Width="136"/>
-                    <ProgressBar x:Name="LoadProgBar" HorizontalAlignment="Left" Height="26" Margin="245,204,0,0" VerticalAlignment="Top" Width="218"/>
+                    <ProgressBar x:Name="LoadProgBar" HorizontalAlignment="Left" Height="26" Margin="134,112,0,0" VerticalAlignment="Top" Width="218"/>
                 </Grid>
             </TabItem>
             <TabItem Header="About">
@@ -56,6 +56,7 @@
                     <TextBlock Margin="33,10,33,116"><Run Text="Lawin - Server "/><Hyperlink x:Name="Lawinserver_github_link" Foreground="#FF6D6D6D" NavigateUri="https://github.com/Lawin0129/LawinServer" TextDecorations="Underline">Github</Hyperlink><Run Text=" "/><LineBreak/><Run Text="PsychoPastt - Proxy"/> <Hyperlink x:Name="prexy_github_link" Foreground="#FF6D6D6D" NavigateUri="https://github.com/PsychoPast/LawinServer" TextDecorations="Underline">Github</Hyperlink><LineBreak/><Run/><LineBreak/><Run Text="Nyamimi - SSL Bypass (Aurora.Runtime)"/><LineBreak/><Run Language="sl-si"/><LineBreak/><Run Language="sl-si" Text="SSL Injection "/> <Hyperlink x:Name="injection_github_link" Foreground="#FF6D6D6D" NavigateUri="https://github.com/Londiuh/FortniteLauncher" TextDecorations="Underline">Github</Hyperlink></TextBlock>
                     <RadioButton Content="Light Mode" Margin="91,137,0,0" VerticalAlignment="Top" x:Name="LightModeBtn" Click="LightModeBtn_Click"/>
                     <RadioButton Content="Dark Mode" Margin="252,138,0,0" VerticalAlignment="Top" x:Name="DarkModeBtn" Click="DarkModeBtn_Click"/>
+                    <Image Visibility="Visible" Source="/FNLauncher_Icon.png" HorizontalAlignment="Left" Height="93" Margin="372,10,0,0" VerticalAlignment="Top" Width="91"/>
                 </Grid>
             </TabItem>
         </TabControl>
