changed fortnite launching

--- a/FortniteLauncher/MainWindow.xaml
+++ b/FortniteLauncher/MainWindow.xaml
@@ -19,13 +19,13 @@
                     <ui:SymbolIcon Symbol="Play" />
                 </ui:TabItemHelper.Icon>
                 <Grid Height="275">
-                    <Label HorizontalAlignment="Right" Margin="0,16,371,210" Width="88">Fortnite path:</Label>
-                    <TextBox TextChanged="PathBOx_TextChanged" Margin="103,10,10,232" FontSize="14" x:Name="PathBOx"/>
-                    <Button x:Name="LaunchBtn" Content="LAUNCH!" Click="LaunchBtn_Click" Margin="0,205,0,0" VerticalAlignment="Top" Height="45" Width="453" HorizontalAlignment="Center"/>
-                    <Button x:Name="ExploreBtn" Click="ExploreBtn_Click" Content="Explore" Margin="343,47,0,0" VerticalAlignment="Top" Width="120"/>
-                    <Image x:Name="SeasonImage" Height="90" Margin="226,48,140,0" VerticalAlignment="Top"/>
+                    <Label HorizontalAlignment="Right" Margin="0,10,375,216" Width="88">Fortnite path:</Label>
+                    <TextBox TextChanged="PathBOx_TextChanged" Margin="103,11,10,232" FontSize="14" x:Name="PathBOx"/>
+                    <Button x:Name="LaunchBtn" Content="LAUNCH!" Click="LaunchBtn_Click" Margin="10,205,0,0" VerticalAlignment="Top" Height="45" Width="453" Grid.ColumnSpan="2"/>
+                    <Button x:Name="ExploreBtn" Click="ExploreBtn_Click" Content="Explore" Margin="343,48,0,0" VerticalAlignment="Top" Width="120"/>
+                    <Image x:Name="SeasonImage" Height="90" Margin="226,48,140,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
                     <TextBlock HorizontalAlignment="Left" Margin="14,48,0,0" TextWrapping="Wrap" Text="The directory must contain the FortniteGame and Engine folders!" VerticalAlignment="Top" Width="222" Height="40"/>
-                    <TextBlock x:Name="testingmessageblock" HorizontalAlignment="Center" Margin="0,168,0,0" TextWrapping="Wrap" Text="This is a preview beta build of FortniteLauncher! You might experience crashes, errors and unexplained glitches!" VerticalAlignment="Top" Width="401" Height="32"/>
+                    <TextBlock x:Name="testingmessageblock" HorizontalAlignment="Left" Margin="36,168,0,0" TextWrapping="Wrap" Text="This is a preview beta build of FortniteLauncher! You might experience crashes, errors and unexplained glitches!" VerticalAlignment="Top" Width="401" Height="32" Grid.ColumnSpan="2"/>
                     <CheckBox Content="Suspend BE" Margin="14,131,0,0" VerticalAlignment="Top"/>
                     <CheckBox Content="Suspend EAC" Margin="139,131,0,0" VerticalAlignment="Top"/>
                 </Grid>
@@ -61,14 +61,15 @@
                     <ui:SymbolIcon Symbol="XboxOneConsole" />
                 </ui:TabItemHelper.Icon>
                 <Grid Height="275">
-                    <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="97" Width="453"><Run Text="Custom Fortnite gamserver project"/><LineBreak/><Run Text="https://github.com/kem0x/raider3.5"/><LineBreak/><Run/><LineBreak/><Run Language="sl-si" Text="Reqirements:"/><LineBreak/><Run Language="sl-si" Text="- Fortnite build 3.5"/><LineBreak/><Run/></TextBlock>
-                    <Button Content="GitHub" x:Name="RaiderGitHubbtn" Click="RaiderGitHubbtn_Click" Margin="10,116,0,0" Width="226" Height="32" VerticalAlignment="Top"/>
-                    <Button Content="Discord" Margin="241,116,0,0" VerticalAlignment="Top" Width="222"/>
-                    <Button Content="Download/Update DLL" x:Name="Download_UpdateRaiderBtn" Click="Download_UpdateRaiderBtn_Click" Margin="10,196,0,0" VerticalAlignment="Top" Width="234"/>
-                    <Button Content="Start Fortnite" x:Name="InjectRaiderDLL" Click="InjectRaiderDLL_Click" Margin="249,196,0,0" VerticalAlignment="Top" Width="214"/>
-                    <TextBox HorizontalAlignment="Left" Margin="127,153,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="229"/>
-                    <Label Content="Path to build 3.5" HorizontalAlignment="Left" Margin="10,154,0,0" VerticalAlignment="Top" Height="31" Width="112"/>
-                    <Button Content="Explore" Margin="361,153,0,0" VerticalAlignment="Top" Width="102"/>
+                    <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="91" Width="453"><Run Text="Custom Fortnite gamserver project"/><LineBreak/><Run/><LineBreak/><Run Text="Reqirements:"/><LineBreak/><Run Text="- Fortnite build 3.5"/><LineBreak/><Run Language="sl-si" Text="-Inject when in the lobby"/></TextBlock>
+                    <Button Content="GitHub" x:Name="RaiderGitHubbtn" Click="RaiderGitHubbtn_Click" Margin="10,106,0,0" Width="226" Height="32" VerticalAlignment="Top"/>
+                    <Button Content="Discord" Margin="241,106,0,0" VerticalAlignment="Top" Width="222"/>
+                    <Button Content="Download/Update DLL" x:Name="Download_UpdateRaiderBtn" Click="Download_UpdateRaiderBtn_Click" Margin="10,212,0,0" VerticalAlignment="Top" Width="150"/>
+                    <Button Content="Start Fortnite" x:Name="InjectRaiderDLL" Click="InjectRaiderDLL_Click" Margin="165,212,0,0" VerticalAlignment="Top" Width="150"/>
+                    <TextBox  HorizontalScrollBarVisibility="Visible" MaxLines="1" HorizontalAlignment="Left" x:Name="Box3_5" Margin="116,143,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="347" Height="21"/>
+                    <Label Content="Path to build 3.5" HorizontalAlignment="Left" Margin="10,144,0,0" VerticalAlignment="Top" Height="30" Width="101"/>
+                    <Button Content="Explore" x:Name="RaiderExplore3_5btn" Click="RaiderExplore3_5btn_Click" Margin="361,175,0,0" VerticalAlignment="Top" Width="102"/>
+                    <Button Content="Inject Raider" x:Name="InjectRaiderDLLBtn" Click="InjectRaiderDLLBtn_Click" Margin="320,212,0,0" VerticalAlignment="Top" Width="143"/>
 
                 </Grid>
             </TabItem>
