--- a/FortniteLauncher/MainWindow.xaml
+++ b/FortniteLauncher/MainWindow.xaml
@@ -26,11 +26,11 @@
                     <Image x:Name="SeasonImage" Height="90" Margin="226,48,140,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
                     <TextBlock HorizontalAlignment="Left" Margin="14,48,0,0" TextWrapping="Wrap" Text="The directory must contain the FortniteGame and Engine folders!" VerticalAlignment="Top" Width="222" Height="40"/>
                     <TextBlock x:Name="testingmessageblock" HorizontalAlignment="Left" Margin="36,168,0,0" TextWrapping="Wrap" Text="This is a preview beta build of FortniteLauncher! You might experience crashes, errors and unexplained glitches!" VerticalAlignment="Top" Width="401" Height="32" Grid.ColumnSpan="2"/>
-                    <CheckBox Content="Suspend BE" Margin="14,131,0,0" VerticalAlignment="Top"/>
-                    <CheckBox Content="Suspend EAC" Margin="139,131,0,0" VerticalAlignment="Top"/>
+                    <CheckBox x:Name="SuspendBECheckBox" Content="Suspend BE" Margin="14,131,0,0" VerticalAlignment="Top"/>
+                    <CheckBox x:Name="SuspendEACCheckBox" Content="Suspend EAC" Margin="139,131,0,0" VerticalAlignment="Top"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="Player">
+            <TabItem Header="Player" x:Name="PlayerTab">
                 <ui:TabItemHelper.Icon>
                     <ui:SymbolIcon Symbol="Contact"/>
                 </ui:TabItemHelper.Icon>
@@ -64,12 +64,12 @@
                     <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="91" Width="453"><Run Text="Custom Fortnite gamserver project"/><LineBreak/><Run/><LineBreak/><Run Text="Reqirements:"/><LineBreak/><Run Text="- Fortnite build 3.5"/><LineBreak/><Run Language="sl-si" Text="-Inject when in the lobby"/></TextBlock>
                     <Button Content="GitHub" x:Name="RaiderGitHubbtn" Click="RaiderGitHubbtn_Click" Margin="10,106,0,0" Width="226" Height="32" VerticalAlignment="Top"/>
                     <Button Content="Discord" Margin="241,106,0,0" VerticalAlignment="Top" Width="222"/>
-                    <Button Content="Download/Update DLL" x:Name="Download_UpdateRaiderBtn" Click="Download_UpdateRaiderBtn_Click" Margin="10,212,0,0" VerticalAlignment="Top" Width="150"/>
-                    <Button Content="Start Fortnite" x:Name="InjectRaiderDLL" Click="InjectRaiderDLL_Click" Margin="165,212,0,0" VerticalAlignment="Top" Width="150"/>
+                    <Button Content="Download/Update DLL" x:Name="Download_UpdateRaiderBtn" Click="Download_UpdateRaiderBtn_Click" Margin="10,212,0,0" VerticalAlignment="Top" Width="158"/>
+                    <Button Content="Start Fortnite" x:Name="InjectRaiderDLL" Click="InjectRaiderDLL_Click" Margin="173,212,0,0" VerticalAlignment="Top" Width="155"/>
                     <TextBox  HorizontalScrollBarVisibility="Visible" MaxLines="1" HorizontalAlignment="Left" x:Name="Box3_5" Margin="116,143,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="347" Height="21"/>
                     <Label Content="Path to build 3.5" HorizontalAlignment="Left" Margin="10,144,0,0" VerticalAlignment="Top" Height="30" Width="101"/>
                     <Button Content="Explore" x:Name="RaiderExplore3_5btn" Click="RaiderExplore3_5btn_Click" Margin="361,175,0,0" VerticalAlignment="Top" Width="102"/>
-                    <Button Content="Inject Raider" x:Name="InjectRaiderDLLBtn" Click="InjectRaiderDLLBtn_Click" Margin="320,212,0,0" VerticalAlignment="Top" Width="143"/>
+                    <Button Content="Inject Raider" x:Name="InjectRaiderDLLBtn" Click="InjectRaiderDLLBtn_Click" Margin="333,212,0,0" VerticalAlignment="Top" Width="130"/>
 
                 </Grid>
             </TabItem>
